GUI Changes - fixed bg color of folder settings

--- a/Notez/src/include/fxml/NotezGui.fxml
+++ b/Notez/src/include/fxml/NotezGui.fxml
@@ -59,7 +59,7 @@
                                       <panes>
                                         <TitledPane expanded="false" text="Folder">
                                              <content>
-                                                <VBox>
+                                                <VBox styleClass="background" stylesheets="@Stylesheets.css">
                                                    <children>
                                                       <HBox>
                                                          <children>
