--- a/Notez/src/include/fxml/NotezDialog.fxml
+++ b/Notez/src/include/fxml/NotezDialog.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.effect.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-
 
 <BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="319.0" styleClass="background" stylesheets="@Stylesheets.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 	<top>
@@ -17,6 +18,9 @@
          <effect>
             <DropShadow />
          </effect>
+         <cursor>
+            <Cursor fx:constant="MOVE" />
+         </cursor>
 		</ToolBar>
 	</top>
 	<center>
@@ -33,6 +37,17 @@
 				<Button fx:id="btnOk" mnemonicParsing="false" onAction="#ok" styleClass="background" stylesheets="@Stylesheets.css" text="Ok" visible="false" />
 				<Button fx:id="btnNo" mnemonicParsing="false" onAction="#no" styleClass="background" stylesheets="@Stylesheets.css" text="No" visible="false" />
 				<Button fx:id="btnCancel" mnemonicParsing="false" onAction="#cancel" styleClass="background" stylesheets="@Stylesheets.css" text="Cancel" visible="false" />
+            <ImageView fx:id="resize" pickOnBounds="true" preserveRatio="true">
+               <HBox.margin>
+                  <Insets top="8.0" />
+               </HBox.margin>
+               <image>
+                  <Image url="@../icons/resize.png" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="SE_RESIZE" />
+               </cursor>
+            </ImageView>
 			</children>
 		</HBox>
 	</bottom>
