--- a/Notez/src/include/fxml/NotezButtonBar.fxml
+++ b/Notez/src/include/fxml/NotezButtonBar.fxml
@@ -8,9 +8,8 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-
-<ToolBar xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <items>
+<fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
 				<HBox AnchorPane.leftAnchor="0.0">
 					<children>
 						<ToggleButton fx:id="btnPin" mnemonicParsing="false" opacity="1d" styleClass="background-darker" stylesheets="@/include/fxml/Stylesheets.css" text="" visible="true">
@@ -131,5 +130,5 @@
             </ImageView>
 					</children>
 				</HBox>
-   </items>
-</ToolBar>
+   </children>
+</fx:root>
