--- a/Notez/src/include/fxml/NotezButtonBar.fxml
+++ b/Notez/src/include/fxml/NotezButtonBar.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 
 <fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/8"
-	xmlns:fx="http://javafx.com/fxml/1">
+	xmlns:fx="http://javafx.com/fxml/1" styleClass="background-darker">
 	<children>
 		<HBox AnchorPane.leftAnchor="0.0">
 			<children>
